--- a/legal_ner/requirements.txt
+++ b/legal_ner/requirements.txt
@@ -1,7 +1,8 @@
 nervaluate==0.1.8 
-numpy==1.21.5 
+numpy==1.23.5 
 scikit_learn==1.2.1 
 spacy==3.4.4 
-torch==1.13.1 
+torch==2.1.0
 tqdm==4.64.0 
 transformers==4.26.0
+typing-extensions==4.5.0
