--- a/legal_ner/domain_adaptation/config/gridsearch.yaml
+++ b/legal_ner/domain_adaptation/config/gridsearch.yaml
@@ -1,3 +1,3 @@
-beta_wordle: [0.25, 0.75, 1.5]
-beta_token: [0.25, 0.75, 1.5]
-beta_window: [0.25, 0.75, 1.5]
+remove_window_domain_classifier: [True, False]
+remove_token_domain_classifier: [True, False]
+remove_wordle_game_module: [True, False]
